api-portal-contour.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-portal-ingress
  namespace: api-portal
  annotations:
    kubernetes.io/ingress.class: contour
spec:
  rules:
  - host: api-portal.34.68.239.100.nip.io
    http:
      paths:
      - backend:
          serviceName: api-portal-server
          servicePort: 8080
